// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. Render a single author 1`] = `
<Text
  accessibilityRole="link"
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  href="/profile/alexandra-frean"
  style={
    Object {
      "color": "#006699",
      "flexDirection": "row",
      "fontFamily": "GillSansMTStd-Medium",
      "fontSize": 13,
      "lineHeight": 13,
      "textDecorationLine": "underline",
    }
  }
>
  Alexandra Frean
</Text>
`;

exports[`2. Render a given section colour 1`] = `
<Text
  accessibilityRole="link"
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  href="/profile/alexandra-frean"
  style={
    Object {
      "color": "blue",
      "flexDirection": "row",
      "fontFamily": "GillSansMTStd-Medium",
      "fontSize": 13,
      "lineHeight": 13,
      "textDecorationLine": "underline",
    }
  }
>
  Alexandra Frean
</Text>
`;

exports[`3. Render an inline element when no author provided 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#006699",
      "flexDirection": "row",
      "fontFamily": "GillSansMTStd-Medium",
      "fontSize": 13,
      "lineHeight": 13,
    }
  }
>
  Lindsay McIntosh Scottish Political Editor
</Text>
`;

exports[`4. Render an author first 1`] = `
Array [
  <Text
    accessibilityRole="link"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    href="/profile/camilla-long"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
        "textDecorationLine": "underline",
      }
    }
  >
    Camilla Long
  </Text>,
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
      }
    }
  >
    , Environment Editor
  </Text>,
]
`;

exports[`5. Render an author last 1`] = `
Array [
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
      }
    }
  >
    RBS Six Nations 
  </Text>,
  <Text
    accessibilityRole="link"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    href="/profile/mike-atherton"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
        "textDecorationLine": "underline",
      }
    }
  >
    Mike Atherton
  </Text>,
]
`;

exports[`6. Render multiple authors separated by commas 1`] = `
Array [
  <Text
    accessibilityRole="link"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    href="/profile/camilla-long"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
        "textDecorationLine": "underline",
      }
    }
  >
    Camilla Long
  </Text>,
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
      }
    }
  >
    , 
  </Text>,
  <Text
    accessibilityRole="link"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    href="/profile/mike-atherton"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
        "textDecorationLine": "underline",
      }
    }
  >
    Mike Atherton
  </Text>,
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
      }
    }
  >
    , 
  </Text>,
  <Text
    accessibilityRole="link"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    href="/profile/alexandra-frean"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
        "textDecorationLine": "underline",
      }
    }
  >
    Alexandra Frean
  </Text>,
]
`;

exports[`7. Render multiple authors separated by spaces 1`] = `
Array [
  <Text
    accessibilityRole="link"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    href="/profile/camilla-long"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
        "textDecorationLine": "underline",
      }
    }
  >
    Camilla Long
  </Text>,
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
      }
    }
  >
     
  </Text>,
  <Text
    accessibilityRole="link"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    href="/profile/mike-atherton"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
        "textDecorationLine": "underline",
      }
    }
  >
    Mike Atherton
  </Text>,
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
      }
    }
  >
     
  </Text>,
  <Text
    accessibilityRole="link"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    href="/profile/alexandra-frean"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
        "textDecorationLine": "underline",
      }
    }
  >
    Alexandra Frean
  </Text>,
]
`;

exports[`8. Render null when AST is empty 1`] = `null`;

exports[`9. Render an author with given styles 1`] = `
<Text
  accessibilityRole="link"
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  href="/profile/alexandra-frean"
  style={
    Object {
      "color": "red",
      "flexDirection": "row",
      "fontFamily": "GillSansMTStd-Medium",
      "fontSize": 13,
      "lineHeight": 13,
      "textDecorationLine": "underline",
    }
  }
>
  Alexandra Frean
</Text>
`;
